parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input DOUBLESEMI
   3        | input oneREPL

   4  oneREPL : Command DOUBLESEMI
   5          | Command SEMI oneREPL

   6  toplevel : EOF
   7           | Command SEMI toplevel

   8  Command : Term
   9          | LCID Binder

  10  Binder : COLON Type

  11  Type : ArrowType

  12  AType : LPAREN Type RPAREN
  13        | BOOL
  14        | NAT

  15  ArrowType : AType ARROW ArrowType
  16            | AType

  17  Term : AppTerm
  18       | LAMBDA LCID COLON Type DOT Term
  19       | IF Term THEN Term ELSE Term

  20  AppTerm : ATerm
  21          | SUCC ATerm
  22          | PRED ATerm
  23          | ISZERO ATerm
  24          | AppTerm ATerm

  25  ATerm : LPAREN Term RPAREN
  26        | LCID
  27        | TRUE
  28        | FALSE
  29        | INTV

  30  %entry% : '\001' toplevel
  31          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (30)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	EOF  shift 13
	LPAREN  shift 14
	.  error

	toplevel  goto 15
	Command  goto 16
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 2
	%entry% : '\002' . input  (31)
	input : .  (1)

	.  reduce 1

	input  goto 20


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (18)

	LCID  shift 21
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (19)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 23
	AppTerm  goto 18
	ATerm  goto 19


state 6
	ATerm : TRUE .  (27)

	.  reduce 27


state 7
	ATerm : FALSE .  (28)

	.  reduce 28


state 8
	AppTerm : SUCC . ATerm  (21)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 24


state 9
	AppTerm : PRED . ATerm  (22)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 25


state 10
	AppTerm : ISZERO . ATerm  (23)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 26


state 11
	Command : LCID . Binder  (9)
	ATerm : LCID .  (26)

	COLON  shift 27
	TRUE  reduce 26
	FALSE  reduce 26
	LCID  reduce 26
	INTV  reduce 26
	LPAREN  reduce 26
	SEMI  reduce 26
	DOUBLESEMI  reduce 26

	Binder  goto 28


state 12
	ATerm : INTV .  (29)

	.  reduce 29


state 13
	toplevel : EOF .  (6)

	.  reduce 6


state 14
	ATerm : LPAREN . Term RPAREN  (25)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 29
	AppTerm  goto 18
	ATerm  goto 19


state 15
	%entry% : '\001' toplevel .  (30)

	.  reduce 30


state 16
	toplevel : Command . SEMI toplevel  (7)

	SEMI  shift 30
	.  error


state 17
	Command : Term .  (8)

	.  reduce 8


state 18
	Term : AppTerm .  (17)
	AppTerm : AppTerm . ATerm  (24)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	THEN  reduce 17
	ELSE  reduce 17
	RPAREN  reduce 17
	SEMI  reduce 17
	DOUBLESEMI  reduce 17

	ATerm  goto 31


state 19
	AppTerm : ATerm .  (20)

	.  reduce 20


state 20
	input : input . DOUBLESEMI  (2)
	input : input . oneREPL  (3)
	%entry% : '\002' input .  (31)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	LPAREN  shift 14
	DOUBLESEMI  shift 32
	$end  reduce 31

	oneREPL  goto 33
	Command  goto 34
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 21
	Term : LAMBDA LCID . COLON Type DOT Term  (18)

	COLON  shift 35
	.  error


state 22
	ATerm : LCID .  (26)

	.  reduce 26


state 23
	Term : IF Term . THEN Term ELSE Term  (19)

	THEN  shift 36
	.  error


state 24
	AppTerm : SUCC ATerm .  (21)

	.  reduce 21


state 25
	AppTerm : PRED ATerm .  (22)

	.  reduce 22


state 26
	AppTerm : ISZERO ATerm .  (23)

	.  reduce 23


state 27
	Binder : COLON . Type  (10)

	BOOL  shift 37
	NAT  shift 38
	LPAREN  shift 39
	.  error

	Type  goto 40
	ArrowType  goto 41
	AType  goto 42


state 28
	Command : LCID Binder .  (9)

	.  reduce 9


state 29
	ATerm : LPAREN Term . RPAREN  (25)

	RPAREN  shift 43
	.  error


state 30
	toplevel : Command SEMI . toplevel  (7)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	EOF  shift 13
	LPAREN  shift 14
	.  error

	toplevel  goto 44
	Command  goto 16
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 31
	AppTerm : AppTerm ATerm .  (24)

	.  reduce 24


state 32
	input : input DOUBLESEMI .  (2)

	.  reduce 2


state 33
	input : input oneREPL .  (3)

	.  reduce 3


state 34
	oneREPL : Command . DOUBLESEMI  (4)
	oneREPL : Command . SEMI oneREPL  (5)

	SEMI  shift 45
	DOUBLESEMI  shift 46
	.  error


state 35
	Term : LAMBDA LCID COLON . Type DOT Term  (18)

	BOOL  shift 37
	NAT  shift 38
	LPAREN  shift 39
	.  error

	Type  goto 47
	ArrowType  goto 41
	AType  goto 42


state 36
	Term : IF Term THEN . Term ELSE Term  (19)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 48
	AppTerm  goto 18
	ATerm  goto 19


state 37
	AType : BOOL .  (13)

	.  reduce 13


state 38
	AType : NAT .  (14)

	.  reduce 14


state 39
	AType : LPAREN . Type RPAREN  (12)

	BOOL  shift 37
	NAT  shift 38
	LPAREN  shift 39
	.  error

	Type  goto 49
	ArrowType  goto 41
	AType  goto 42


state 40
	Binder : COLON Type .  (10)

	.  reduce 10


state 41
	Type : ArrowType .  (11)

	.  reduce 11


state 42
	ArrowType : AType . ARROW ArrowType  (15)
	ArrowType : AType .  (16)

	ARROW  shift 50
	DOT  reduce 16
	RPAREN  reduce 16
	SEMI  reduce 16
	DOUBLESEMI  reduce 16


state 43
	ATerm : LPAREN Term RPAREN .  (25)

	.  reduce 25


state 44
	toplevel : Command SEMI toplevel .  (7)

	.  reduce 7


state 45
	oneREPL : Command SEMI . oneREPL  (5)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	LPAREN  shift 14
	.  error

	oneREPL  goto 51
	Command  goto 34
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 46
	oneREPL : Command DOUBLESEMI .  (4)

	.  reduce 4


state 47
	Term : LAMBDA LCID COLON Type . DOT Term  (18)

	DOT  shift 52
	.  error


state 48
	Term : IF Term THEN Term . ELSE Term  (19)

	ELSE  shift 53
	.  error


state 49
	AType : LPAREN Type . RPAREN  (12)

	RPAREN  shift 54
	.  error


state 50
	ArrowType : AType ARROW . ArrowType  (15)

	BOOL  shift 37
	NAT  shift 38
	LPAREN  shift 39
	.  error

	ArrowType  goto 55
	AType  goto 42


state 51
	oneREPL : Command SEMI oneREPL .  (5)

	.  reduce 5


state 52
	Term : LAMBDA LCID COLON Type DOT . Term  (18)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 56
	AppTerm  goto 18
	ATerm  goto 19


state 53
	Term : IF Term THEN Term ELSE . Term  (19)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 57
	AppTerm  goto 18
	ATerm  goto 19


state 54
	AType : LPAREN Type RPAREN .  (12)

	.  reduce 12


state 55
	ArrowType : AType ARROW ArrowType .  (15)

	.  reduce 15


state 56
	Term : LAMBDA LCID COLON Type DOT Term .  (18)

	.  reduce 18


state 57
	Term : IF Term THEN Term ELSE Term .  (19)

	.  reduce 19


60 terminals, 13 nonterminals
32 grammar rules, 58 states
